{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 64,
  "lineage": "f3878a3f-ee71-8b5f-159d-304d0c3fb5d1",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "result-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/result-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "result-ingress",
                "namespace": "default",
                "resource_version": "819340",
                "uid": "b99cb6e0-d488-4a25-93f9-f2b693ec37f1"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "result",
                        "port": [
                          {
                            "name": "",
                            "number": 5001
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.36.169.8"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "vote-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/vote-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "vote-ingress",
                "namespace": "default",
                "resource_version": "816329",
                "uid": "339e111c-1c65-4c83-90db-1871e3fd8abc"
              }
            ],
            "spec": [
              {
                "default_backend": [
                  {
                    "resource": [],
                    "service": [
                      {
                        "name": "vote",
                        "port": [
                          {
                            "name": "",
                            "number": 5000
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress_class_name": "",
                "rule": [],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "",
                        "ip": "34.160.74.36"
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "module": "module.db-service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/db",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "db"
                },
                "name": "db",
                "namespace": "default",
                "resource_version": "812158",
                "uid": "29ae6e98-c6e7-4afa-9ba6-9adaa034fc83"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.5.40",
                "cluster_ips": [
                  "10.160.5.40"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "db-service",
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "db"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "module": "module.redis-service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/redis",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "redis"
                },
                "name": "redis",
                "namespace": "default",
                "resource_version": "812156",
                "uid": "65dc8bf8-b2f5-48bd-8bac-735e60cbb5d8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.6.196",
                "cluster_ips": [
                  "10.160.6.196"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "redis-service",
                    "node_port": 0,
                    "port": 6379,
                    "protocol": "TCP",
                    "target_port": "6379"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "redis"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "module": "module.result-service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/result",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "result"
                },
                "name": "result",
                "namespace": "default",
                "resource_version": "819101",
                "uid": "414e48f3-616d-4568-8a16-2c528855c2ed"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.10.113",
                "cluster_ips": [
                  "10.160.10.113"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "result-service",
                    "node_port": 31001,
                    "port": 5001,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "result"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    },
    {
      "module": "module.vote-service",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/vote",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "vote"
                },
                "name": "vote",
                "namespace": "default",
                "resource_version": "812159",
                "uid": "3a2a3f71-1726-469b-8584-dcdfe628ba6b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.160.12.100",
                "cluster_ips": [
                  "10.160.12.100"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "vote-service",
                    "node_port": 31000,
                    "port": 5000,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "vote"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.google_client_config.default",
            "data.google_container_cluster.my_cluster",
            "data.terraform_remote_state.gke"
          ]
        }
      ]
    }
  ]
}